--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -137,7 +137,7 @@
             padding: 0.5rem;
     
             .email{
-                width: 70%;
+                width: 80%;
                 font-size: 1.5rem;
             }
         }
@@ -205,6 +205,20 @@
     .services{
         .box-container{
             grid-template-columns: 1fr;
+        }
+    }
+
+    .newsletter{
+        form{
+            .email{
+                width: 70%;
+                font-size: 1.3rem;
+            }
+
+            .btn{
+                padding: 1rem 2rem;
+                font-size: 1.5rem;
+            }
         }
     }
 
